# PicoSigGen

./: CMakeLists.txt
src/: parallel_out.pio  pio_experiment.c  shell.c  shell.h
